# uMi9s_Firmware

./: .cproject  .project  CMakeLists.txt  SigmaStudioFW.c  SigmaStudioFW.h  constants  defines.h  gatt_db.c  gatt_db.h  hal-config-app-common.h  hal-config-board.h  init_app.c  init_board.c  init_mcu.c  main.c  mpu9250.c  mpu9250.h  uMi9s.dep  uMi9s.ewd  uMi9s.ewp  uMi9s.ewt  uMi9s.eww  uMi9s.isc  uMi9s_EFR32BG1B232F256GM56.hwconf  umi9s.params  umi9s.xml  umi9s_IC_1.h  umi9s_IC_1_PARAM.h  umi9s_IC_1_REG.h  umi9s_NetList.xml
settings/: uMi9s.Debug.cspy.bat  uMi9s.Debug.cspy.ps1  uMi9s.Debug.driver.xcl  uMi9s.Debug.general.xcl  uMi9s.dbgdt  uMi9s.dnx  uMi9s.wsdt
